components/homepage/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  labels:
    app.kubernetes.io/instance: homepage
    app.kubernetes.io/name: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: homepage
          port: http
  tls:
    certResolver: letsencrypt
